# aws-supplychain-lakehouse

./: .env.example  .gitignore  README.md  last_steps.md  pyproject.toml
.agents/rules/: contraints.md  logbook.md
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_Home.py  2_Analytics.py  3_Explorer.py  4_Health.py
frontend/services/: api_client.py  athena_client.py  aws_metadata.py  config.py
infra/terraform/: api_gateway.tf  athena.tf  athena_gold.tf  backend_infra.tf  budgets.tf  dynamodb.tf  glue.tf  iam.tf  lambda.tf  ops_lambda.tf  orchestration.tf  providers.tf  s3.tf  stepfunctions.tf  variables.tf
scripts/: deploy_gold_views.py  historical_bootstrap.py
src/api/: lambda_handler.py  operational_api.py
src/extract/: explore.py  extractor.py  ingestion_job.py  kaggle_fetcher.py  mock_generator.py  run_pipeline.py
src/models/: car_sales.py  ecommerce_sales.py
src/ops/: scale_down_dynamo.py  scale_up_dynamo.py
src/transform/: gold_views.sql  the_split_job.py
