[project]
name = "aws-supplychain-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.0.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
